--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,30 @@ body {
   overflow: hidden;
 }
 
+#carousel {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+#carousel button {
+  padding: 0 1.8em;
+  background-color: rgba(211, 211, 211, 50%);
+  border: none;
+}
+
+#carousel button:hover {
+  cursor: pointer;
+  background-color: rgba(211, 211, 211, 100%);
+}
+
+#carousel button.previous-slide {
+  border-radius: 0.2em 0 0 0.2em;
+}
+
+#carousel button.next-slide {
+  border-radius: 0 0.2em 0.2em 0;
+}
+
 #carousel-frame {
   border: 1px solid;
   height: 30em;
