Add cosmetic navigation dots
By cosmetic, I mean that these dots cannot currently be clicked themselves in order to
change the slide number. They instead are only reactive (i.e. they react to the slide
changing).

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,6 @@ body {
 }
 
 .carousel-slide {
-  border: 1px solid red;
   height: 30em;
   width: 55em;
   display: none;
@@ -79,4 +78,24 @@ body {
 
 .carousel-slide.showing {
   display: block;
+}
+
+.navigation-dot-container {
+  display: flex;
+  gap: 0.2em;
+  padding: 1em;
+  grid-column: 2 / 3;
+  place-self: center;
+}
+
+.navigation-dot {
+  width: 1em;
+  height: 1em;
+  border: 1px solid;
+  border-radius: 50%;
+  border-color: lightgrey;
+}
+
+.navigation-dot.selected {
+  background-color: lightgrey;
 }
